explana-app/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explana-api
spec:
  selector:
    matchLabels:
      app: explana-api
  template:
    metadata:
      labels:
        app: explana-api
    spec:
      containers:
      - name: explana-api
        image: myawesomeapps/explana-api:1.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
