explana-app/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explanaapp-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: api.explana.awesomeapps.cloud
    external-dns.alpha.kubernetes.io/ttl: "120"
  labels:
    name: api-ingress
spec:
  tls:
    - hosts:
      - "api.explana.awesomeapps.cloud"
      secretName: "explanapp-api-tls"
  rules:
  - host: api.explana.awesomeapps.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: explana-api-svc
            port: 
              number: 80
